--- a/css/style.css
+++ b/css/style.css
@@ -114,3 +114,22 @@ body>* {
 .company-location {
     border-radius: 20px;
 }
+
+.benefit-icon {
+    font-size: 50px !important;
+}
+
+@media (max-width: 768px) {
+    .d-none-mobile {
+        display: none !important;
+    }
+}
+
+.benefit-container {
+    padding: 20px;
+    background-color: white;
+    box-shadow: 0.25px 0.25px 3px 0px rgba(0, 0, 0, 0.75);
+    -webkit-box-shadow: 0.25px 0.5px 3px 0px rgba(0, 0, 0, 0.75);
+    -moz-box-shadow: 0.2px 0.25px 3px 0px rgba(0, 0, 0, 0.75);
+    border-radius: 20px;
+}
